<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/tvCityTitle"/>
    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintStart_toEndOf="@id/tvCityTitle"
        android:text="@string/city"
        app:layout_constraintTop_toTopOf="@id/tvCityTitle"
        android:textSize="20sp"

        android:textColor="@color/black" />
    <TextView
        android:id="@+id/tvLatitudeTitle"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvCityTitle"
        app:layout_constraintTop_toBottomOf="@id/tvCityTitle"
        android:text="@string/latitude"
        android:textSize="20sp"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvLatitudeTitle"
        app:layout_constraintTop_toBottomOf="@id/tvCityTitle"
        android:text="@string/latitude"
        android:textSize="20sp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/tvLongitudeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvLatitude"
        android:text="@string/longitude"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tvLongitudeTitle"
        android:text="@string/longitude"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        android:textSize="20sp"
        android:textColor="@color/black" />


</androidx.constraintlayout.widget.ConstraintLayout>