<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvCityTitle"

                app:layout_constraintTop_toTopOf="@id/tvCityTitle" />

            <TextView
                android:id="@+id/tvLatitudeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvCityTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCityTitle" />


            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvLatitudeTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCityTitle" />

            <TextView
                android:id="@+id/tvLongitudeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/longitude"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tvLatitude"
                app:layout_constraintTop_toBottomOf="@id/tvCityName" />

            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/tvLongitudeTitle"
                app:layout_constraintTop_toBottomOf="@id/tvCityName" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBtnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLongitude" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>